# gap

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  GNUmakefile.in  Makefile.rules  PRINT_CONSTRUCTORS_README.md  README.buildsys.md  README.md  autogen.sh  configure.ac  wrapGlobalFunctions.g
cnf/: addguards  build-extern.sh  gac.in
doc/ref/: function.xml
etc/: ci.sh
grp/: basic.gd
hpcgap/: remove-duplicates.sh
hpcgap/lib/: init.g
hpcgap/src/: c_filter1.c  c_methsel1.c  c_oper1.c  c_random.c  c_type1.c  funcs.c  gap.c  pperm.c  sysfiles.c  sysfiles.h  system.c  trans.c
hpcgap/tst/: comprvec.tst
hpcgap/tst/testinstall/: alghom.tst  algmat.tst  algsc.tst  combinat.tst  ctblfuns.tst  ctblmoli.tst  ctblmono.tst  ctblsolv.tst  cyclotom.tst  ffe.tst  ffeconway.tst  grpfp.tst  grpfree.tst  grpmat.tst  grppc.tst  grppcnrm.tst  listgen.tst  mapping.tst  mgmring.tst  modfree.tst  morpheus.tst  onecohom.tst  oprt.tst  ratfun.tst  read.tst  recordname.tst  relation.tst  rwspcgrp.tst  semicong.tst  semigrp.tst  semirel.tst  strings.tst  vspchom.tst  vspcmat.tst  vspcrow.tst  xgap.tst  zmodnz.tst
hpcgap/tst/teststandard/: reesmat.tst
lib/: annotateConstructors.g  files.gd  files.gi  filter.g  function.g  global.gi  grpfree.gd  grpfree.gi  grpperm.gi  helpbase.gi  helpview.gi  init.g  io.gd  io.gi  kernel.g  list.gd  oper.g  oper1.g  printConstructors.g  read1.g  read2.g  read5.g  read8.g  streams.gd  streams.gi  variable.g  vecmat.gi  wordass.gi
src/: c_filter1.c  c_methsel1.c  c_oper1.c  c_random.c  c_type1.c  calls.c  compiler.c  gap.c  gap.h  gap_version.c  gapinterface.h  gasman.c  gasman.h  gmpints.c  integer.c  intrprtr.c  io.c  io.h  iostream.c  libgap.c  listoper.c  modules-builtin.c  objects.c  objects.h  objset.c  opers.c  plist.c  read.c  sage_interface.c  scanner.c  streams.c  syntaxtree.c  syntaxtree.h  sysfiles.c  system.c  system.h  trans.c
src/hpc/: gapmpi.c  serialize.c  threadapi.c  tls.h  traverse.c
tst/testinstall/: callfunc.tst  intarith.tst  numtheor.tst  syntaxtree.tst
